First careful revert of 014b11496. boost::log not working yet. But it is getting closer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,6 +154,7 @@ IF (TRACEONLY)
 ENDIF (TRACEONLY)
 
 IF(BOOST_LOGGER)
+  SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} BoostLog")
   ADD_DEFINITIONS("-D YADE_BOOST_LOG")
   ADD_DEFINITIONS("-D BOOST_LOG_DYN_LINK")
   IF (DEBUG)
