--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -97,6 +97,8 @@ cmake_opensuse15:
     - master
     - merge_request
   script:
+# XXX: it will take to long to build new docker image. Let's quickly remove the bad symlink here.
+    - rm -f /usr/lib64/libboost_python-py36.so
     - mkdir build && cd build
     - export CC="ccache gcc"
     - export CXX="ccache g++"
