Quick install binutils-gold, later this should go to docker image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -287,6 +287,8 @@ make_opensuse15:
   script:
     - export LINK_GOLD=$(case    $CI_PIPELINE_SOURCE in "merge_request_event") echo "20" ;; *) echo "10";; esac)
     - export LINK_REGULAR=$(case $CI_PIPELINE_SOURCE in "merge_request_event") echo "10" ;; *) echo "20";; esac)
+#XXX: quick install, later this should go to docker image
+    - zypper install -y binutils-gold
     - ld --version
     - update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.gold" $LINK_GOLD
     - update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.bfd" $LINK_REGULAR
