--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ cmake_16_04:
   stage: cmake
   only:
     - master
-    - merge_request
+#   - merge_request
   script:
     - mkdir build && cd build
     - export CC="ccache gcc"
@@ -61,7 +61,7 @@ cmake_stretch:
   stage: cmake
   only:
     - master
-    - merge_request
+#   - merge_request
   script:
     - mkdir build && cd build
     - export CC="ccache gcc"
@@ -78,7 +78,7 @@ cmake_buster:
   stage: cmake
   only:
     - master
-    - merge_request
+#   - merge_request
   script:
     - mkdir build && cd build
     - export CC="ccache gcc"
@@ -95,7 +95,7 @@ cmake_opensuse15:
   stage: cmake
   only:
     - master
-    - merge_request
+#   - merge_request
   script:
     - mkdir build && cd build
     - export CC="ccache gcc"
@@ -123,7 +123,7 @@ make_16_04:
   stage: build
   only:
     - master
-    - merge_request
+#   - merge_request
   script:
     - export LINK_GOLD=$(case    $CI_PIPELINE_SOURCE in "merge_request_event") echo "20" ;; *) echo "10";; esac)
     - export LINK_REGULAR=$(case $CI_PIPELINE_SOURCE in "merge_request_event") echo "10" ;; *) echo "20";; esac)
@@ -203,7 +203,7 @@ make_stretch:
   stage: build
   only:
     - master
-    - merge_request
+#   - merge_request
   script:
     - export LINK_GOLD=$(case    $CI_PIPELINE_SOURCE in "merge_request_event") echo "20" ;; *) echo "10";; esac)
     - export LINK_REGULAR=$(case $CI_PIPELINE_SOURCE in "merge_request_event") echo "10" ;; *) echo "20";; esac)
@@ -243,7 +243,7 @@ make_buster:
   stage: build
   only:
     - master
-    - merge_request
+#   - merge_request
   script:
     - export LINK_GOLD=$(case    $CI_PIPELINE_SOURCE in "merge_request_event") echo "20" ;; *) echo "10";; esac)
     - export LINK_REGULAR=$(case $CI_PIPELINE_SOURCE in "merge_request_event") echo "10" ;; *) echo "20";; esac)
@@ -283,7 +283,7 @@ make_opensuse15:
   stage: build
   only:
     - master
-    - merge_request
+#   - merge_request
   script:
     - export LINK_GOLD=$(case    $CI_PIPELINE_SOURCE in "merge_request_event") echo "20" ;; *) echo "10";; esac)
     - export LINK_REGULAR=$(case $CI_PIPELINE_SOURCE in "merge_request_event") echo "10" ;; *) echo "20";; esac)
@@ -325,7 +325,7 @@ test_16_04:
   stage: test
   only:
     - master
-    - merge_request
+#   - merge_request
   script:
     - install/bin/yade-ci --test
     - cat /etc/issue
@@ -349,7 +349,7 @@ test_stretch:
   stage: test
   only:
     - master
-    - merge_request
+#   - merge_request
   script:
     - install/bin/yade-ci --test
     - cat /etc/issue
@@ -361,7 +361,7 @@ test_buster:
   stage: test
   only:
     - master
-    - merge_request
+#   - merge_request
   script:
     - install/bin/yade-ci --test
     - cat /etc/issue
@@ -373,7 +373,7 @@ test_opensuse15:
   stage: test
   only:
     - master
-    - merge_request
+#   - merge_request
   script:
     - install/bin/yade-ci --test
     - cat /etc/issue
@@ -392,7 +392,7 @@ check_16_04:
   stage: test
   only:
     - master
-    - merge_request
+#   - merge_request
   script:
     - install/bin/yade-ci --checks
   dependencies:
@@ -414,7 +414,7 @@ check_stretch:
   stage: test
   only:
     - master
-    - merge_request
+#   - merge_request
   script:
     - install/bin/yade-ci --checks
   dependencies:
@@ -425,7 +425,7 @@ check_buster:
   stage: test
   only:
     - master
-    - merge_request
+#   - merge_request
   script:
     - install/bin/yade-ci --checks
   dependencies:
@@ -436,7 +436,7 @@ check_opensuse15:
   stage: test
   only:
     - master
-    - merge_request
+#   - merge_request
   script:
     - install/bin/yade-ci --checks
   dependencies:
