--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ cmake_16_04:
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
   only:
     - master
-#   - merge_request
+    - merge_request
 
 cmake_18_04:
   <<: *cmake_definition
@@ -54,21 +54,21 @@ cmake_stretch:
   image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
   only:
     - master
-#   - merge_request
+    - merge_request
 
 cmake_buster:
   <<: *cmake_definition
   image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
   only:
     - master
-#   - merge_request
+    - merge_request
 
 cmake_suse15:
   <<: *cmake_definition
   image: registry.gitlab.com/yade-dev/docker-yade:suse15
   only:
     - master
-#   - merge_request
+    - merge_request
 
 
 # Perhaps two more will added later
@@ -119,7 +119,7 @@ make_16_04:
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
   only:
     - master
-#   - merge_request
+    - merge_request
   dependencies:
     - cmake_16_04
 
@@ -137,7 +137,7 @@ make_stretch:
   image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
   only:
     - master
-#   - merge_request
+    - merge_request
   dependencies:
     - cmake_stretch
 
@@ -146,7 +146,7 @@ make_buster:
   image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
   only:
     - master
-#   - merge_request
+    - merge_request
   dependencies:
     - cmake_buster
 
@@ -155,7 +155,7 @@ make_suse15:
   image: registry.gitlab.com/yade-dev/docker-yade:suse15
   only:
     - master
-#   - merge_request
+    - merge_request
   dependencies:
     - cmake_suse15
 
@@ -173,7 +173,7 @@ test_16_04:
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
   only:
     - master
-#   - merge_request
+    - merge_request
   dependencies:
     - make_16_04
 
@@ -191,7 +191,7 @@ test_stretch:
   image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
   only:
     - master
-#   - merge_request
+    - merge_request
   dependencies:
     - make_stretch
 
@@ -200,7 +200,7 @@ test_buster:
   image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
   only:
     - master
-#   - merge_request
+    - merge_request
   dependencies:
     - make_buster
 
@@ -209,7 +209,7 @@ test_suse15:
   image: registry.gitlab.com/yade-dev/docker-yade:suse15
   only:
     - master
-#   - merge_request
+    - merge_request
   dependencies:
     - make_suse15
 
@@ -230,7 +230,7 @@ check_16_04:
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
   only:
     - master
-#   - merge_request
+    - merge_request
   dependencies:
     - make_16_04
 
@@ -248,7 +248,7 @@ check_stretch:
   image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
   only:
     - master
-#   - merge_request
+    - merge_request
   dependencies:
     - make_stretch
 
@@ -257,7 +257,7 @@ check_buster:
   image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
   only:
     - master
-#   - merge_request
+    - merge_request
   dependencies:
     - make_buster
 
@@ -266,7 +266,7 @@ check_suse15:
   image: registry.gitlab.com/yade-dev/docker-yade:suse15
   only:
     - master
-#   - merge_request
+    - merge_request
   dependencies:
     - make_suse15
 
